fix chart image width on mobile (?)

--- a/ONSstyle.scss
+++ b/ONSstyle.scss
@@ -299,12 +299,25 @@ section.has-light-background a, section.has-light-background a:hover {
   padding-bottom: 0;
   margin-bottom: 0.5rem;
 }
+
+
+.ons-card {
+  overflow: hidden;
+}
   
-.card-img-top {
-  height: 200px;    
-  object-fit: cover;   
+.ons-card__image {
+  display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.g-col-12 .ons-card,
+.g-col-12 > a {
   width: 100%;
 }
+
+
 .card-subtitle-index {
   font-weight: $headings-font-weight;
   font-size: 80%;
